--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <!-- header part has started -->
     <header class="header">
+        <!-- nav part -->
         <div class="nav width">
             <div class="logo">
                 <h3>G3 Architects</h3>
@@ -23,6 +24,18 @@
                     <li><a href="">Login</a></li>
                 </ul>
             </nav>
+        </div>
+        <!-- banner part -->
+        <div class="banner width">
+            <div class="banner-info">
+                <h1 class="banner-title">Brand New <br> Group of Architects
+                </h1>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</p>
+                <button class="primary-btn">Explore More</button>
+            </div>
+            <div class="banner-img">
+                <img src="images/banner.png" alt="">
+            </div>
         </div>
     </header>
     <!-- header part has ended -->
