--- a/index.html
+++ b/index.html
@@ -41,7 +41,29 @@
     <!-- header part has ended -->
     <!-- main part has started -->
     <main>
-
+        <!-- Features part -->
+        <section class="features width">
+            <div class="feature-img">
+                <div>
+                    <img src="images/team1.png" alt="">
+                </div>
+                <div>
+                    <img src="images/team2.png" alt="">
+                </div>
+                <div>
+                    <img src="images/team3.png" alt="">
+                </div>
+                <div>
+                    <img src="images/team4.png" alt="">
+                </div>
+            </div>
+            <div class="feature-info">
+                <h3 class="feature-title">Quick list of Our <br><span class="singleword-color">Features</span>
+                </h3>
+                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="primary-btn">Explore More</button>
+            </div>
+        </section>
     </main>
     <!-- main part has ended -->
     <!-- footer part has started -->
