--- a/index.html
+++ b/index.html
@@ -60,8 +60,46 @@
             <div class="feature-info">
                 <h3 class="feature-title">Quick list of Our <br><span class="singleword-color">Features</span>
                 </h3>
-                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by injected <br> humour, or randomised words which don't look even</p>
                 <button class="primary-btn">Explore More</button>
+            </div>
+        </section>
+        <!-- features list -->
+        <section class="containers width">
+            <div class="features-list">
+                <h2 class="features-list-title">Features you will <br> love & enjoy</h2>
+                <p class="features-list-description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised words which don't look even</p>
+                <div class="feature">
+                    <div class="container">
+                        <h5 class="container-title">
+                            Dexktop & Mobile Version</h5>
+                        <p class="container-description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
+                    </div>
+                    <div class="container">
+                        <h5 class="container-title">
+                            Dexktop & Mobile Version</h5>
+                        <p class="container-description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
+                    </div>
+                    <div class="container">
+                        <h5 class="container-title">
+                            Dexktop & Mobile Version</h5>
+                        <p class="container-description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
+                    </div>
+                    <div class="container">
+                        <h5 class="container-title">
+                            Dexktop & Mobile Version</h5>
+                        <p class="container-description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br>  injected humour, or randomised...........</p>
+                    </div>
+                </div>
+            </div>
+            <div class="features-banner">
+                <div class="features-banner-img">
+                    <img src="images/architect.png" alt="">
+                </div>
+                <div class="years-experience">
+                    <button class="secondary-btn"> 10+Year <br> <span>Experience
+                    </span></button>
+                </div>
             </div>
         </section>
     </main>
