--- a/index.html
+++ b/index.html
@@ -97,8 +97,59 @@
                     <img src="images/architect.png" alt="">
                 </div>
                 <div class="years-experience">
-                    <button class="secondary-btn"> 10+Year <br> <span>Experience
+                    <button class="secondary-btn">10+ Year <br> <span>Experience
                     </span></button>
+                </div>
+            </div>
+        </section>
+        <!-- some facts part -->
+        <section class="some-facts width">
+            <h2 class="facts-title">Some Facts</h2>
+            <p class="facts-description">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+            <div class="activites">
+                <div class="activities-container">
+                    <div class="activities-img">
+                        <img src="images/icons/ribon.png" alt="">
+                    </div>
+                    <div class="count">
+                        <h3>54</h3>
+                    </div>
+                    <div class="activites-name">
+                        <p>Awards Winnings</p>
+                    </div>
+                </div>
+                <div class="activities-container">
+                    <div class="activities-img">
+                        <img src="images/icons/projects.png" alt="">
+                    </div>
+                    <div class="count">
+                        <h3>1458</h3>
+                    </div>
+                    <div class="activites-name">
+                        <p>Project Finished</p>
+                    </div>
+                </div>
+                <div class="activities-container">
+                    <div class="activities-img">
+                        <img src="images/icons/customers.png" alt="">
+                    </div>
+                    <div class="count">
+                        <h3>590</h3>
+                    </div>
+                    <div class="activites-name">
+                        <p>Clients Worked</p>
+                    </div>
+                </div>
+                <div class="activities-container">
+                    <div class="activities-img">
+                        <img src="images/icons/email.png" alt="">
+                    </div>
+                    <div class="count">
+                        <h3>22578</h3>
+                    </div>
+                    <div class="activites-name">
+                        <p>Email Send</p>
+                    </div>
                 </div>
             </div>
         </section>
