--- a/index.html
+++ b/index.html
@@ -153,6 +153,23 @@
                 </div>
             </div>
         </section>
+        <!-- sponsors company part-->
+        <section class="sponsor width">
+            <div>
+                <div class="sponsor-info">
+                    <h3 class="sponsor-title">Our Sponspors</h3>
+                    <p class="sponsor-details">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+                </div>
+                <div class="sponsor-company">
+                    <img src="images/sponsors/spotify.png" alt="">
+                    <img src="images/sponsors/amazon.png" alt="">
+                    <img src="images/sponsors/google.png" alt="">
+                    <img src="images/sponsors/telerama.png" alt="">
+                    <img src="images/sponsors/figma.png" alt="">
+                </div>
+            </div>
+        </section>
+
     </main>
     <!-- main part has ended -->
     <!-- footer part has started -->
