--- a/index.html
+++ b/index.html
@@ -169,12 +169,11 @@
                 </div>
             </div>
         </section>
-
     </main>
     <!-- main part has ended -->
     <!-- footer part has started -->
-    <footer>
-
+    <footer class="footer width">
+        <p class="footer-details">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
     <!-- footer part has ended -->
 </body>
