--- a/index.html
+++ b/index.html
@@ -76,18 +76,17 @@
                         <p class="container-description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
                     </div>
                     <div class="container">
-                        <h5 class="container-title">
-                            Dexktop & Mobile Version</h5>
+                        <h5 class="container-title">Drag & Drop Builder</h5>
                         <p class="container-description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
                     </div>
                     <div class="container">
                         <h5 class="container-title">
-                            Dexktop & Mobile Version</h5>
+                            Awesome Modern Design</h5>
                         <p class="container-description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
                     </div>
                     <div class="container">
                         <h5 class="container-title">
-                            Dexktop & Mobile Version</h5>
+                            Super Easy to Edit</h5>
                         <p class="container-description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br>  injected humour, or randomised...........</p>
                     </div>
                 </div>
