--- a/index.html
+++ b/index.html
@@ -168,6 +168,49 @@
                 </div>
             </div>
         </section>
+        <section class="our-photo-gallery width">
+            <h1 class="gallery-title">Our photo gallery
+            </h1>
+            <div class="photo-grid">
+                <div class="single-photo">
+                    <img src="images/team1.png" alt="">
+                </div>
+                <div class="single-photo">
+                    <img src="images/team2.png" alt="">
+                </div>
+                <div class="single-photo">
+                    <img src="images/team3.png" alt="">
+                </div>
+                <div class="single-photo">
+                    <img src="images/team4.png" alt="">
+                </div>
+                <div class="single-photo">
+                    <div class="another-grid">
+                        <div class="single-photo">
+                            <img src="images/team2.png" alt="">
+                        </div>
+                        <div class="single-photo">
+                            <img src="images/team2.png" alt="">
+                        </div>
+                        <div class="single-photo">
+                            <img src="images/team2.png" alt="">
+                        </div>
+                        <div class="single-photo">
+                            <img src="images/team2.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="single-photo">
+                    <img src="images/team2.png" alt="">
+                </div>
+                <div class="single-photo">
+                    <img src="images/banner.png" alt="">
+                </div>
+                <div class="gallery-btn">
+                    <button class="primary-btn">See more</button>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- main part has ended -->
     <!-- footer part has started -->
