--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="banner-info">
                 <h1 class="banner-title">Brand New <br> Group of Architects
                 </h1>
-                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</p>
+                <p class="banner-description">Architecture is the art and technique of designing and building, as distinguished from the skills associated with construction.</p>
                 <button class="primary-btn">Explore More</button>
             </div>
             <div class="banner-img">
@@ -60,7 +60,7 @@
             <div class="feature-info">
                 <h3 class="feature-title">Quick list of Our <br><span class="singleword-color">Features</span>
                 </h3>
-                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by injected <br> humour, or randomised words which don't look even</p>
+                <p class="feature-description">Architecture is the art and technique of designing and building, as distinguished from the skills associated with construction.</p>
                 <button class="primary-btn">Explore More</button>
             </div>
         </section>
@@ -68,7 +68,7 @@
         <section class="containers width">
             <div class="features-list">
                 <h2 class="features-list-title">Features you will <br> love & enjoy</h2>
-                <p class="features-list-description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised words which don't look even</p>
+                <p class="features-list-description">Architecture is the art and technique of designing and building, as distinguished from the skills associated with construction.</p>
                 <div class="feature">
                     <div class="container">
                         <h5 class="container-title">
@@ -104,7 +104,7 @@
         <!-- some facts part -->
         <section class="some-facts width">
             <h2 class="facts-title">Some Facts</h2>
-            <p class="facts-description">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+            <p class="facts-description">Architecture is the art and technique of designing and building, as distinguished from the skills associated with construction.</p>
             <div class="activites">
                 <div class="activities-container">
                     <div class="activities-img">
@@ -157,7 +157,7 @@
             <div>
                 <div class="sponsor-info">
                     <h3 class="sponsor-title">Our Sponspors</h3>
-                    <p class="sponsor-details">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+                    <p class="sponsor-details">Architecture is the art and technique of designing and building, as distinguished from the skills associated with construction.</p>
                 </div>
                 <div class="sponsor-company">
                     <img src="images/sponsors/spotify.png" alt="">
