--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="banner-info">
                 <h1 class="banner-title">Brand New <br> Group of Architects
                 </h1>
-                <p class="banner-description">Architecture is the art and technique of designing and building, as distinguished from the skills associated with construction.</p>
+                <p class="banner-description">Architecture is the art and technique of designing and building, as distinguished from the skills associated with construction. <br> According to Vitruvius, the architect should strive to fulfill each of these three attributes as well as possible.</p>
                 <button class="primary-btn">Explore More</button>
             </div>
             <div class="banner-img">
@@ -60,7 +60,7 @@
             <div class="feature-info">
                 <h3 class="feature-title">Quick list of Our <br><span class="singleword-color">Features</span>
                 </h3>
-                <p class="feature-description">Architecture is the art and technique of designing and building, as distinguished from the skills associated with construction.</p>
+                <p class="feature-description">Architecture is the art and technique of designing and building, <br> as distinguished from the skills associated with construction. <br> According to Vitruvius.</p>
                 <button class="primary-btn">Explore More</button>
             </div>
         </section>
