--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <!-- some facts part -->
         <section class="some-facts width">
             <h2 class="facts-title">Some Facts</h2>
-            <p class="facts-description">Architecture is the art and technique of designing and building, as distinguished from the skills associated with construction.</p>
+            <p class="facts-description">Architecture is the art and technique of designing and building, <br> as distinguished from the skills associated with construction.</p>
             <div class="activites">
                 <div class="activities-container">
                     <div class="activities-img">
@@ -157,7 +157,7 @@
             <div>
                 <div class="sponsor-info">
                     <h3 class="sponsor-title">Our Sponspors</h3>
-                    <p class="sponsor-details">Architecture is the art and technique of designing and building, as distinguished from the skills associated with construction.</p>
+                    <p class="sponsor-details">Architecture is the art and technique of designing and building, <br> as distinguished from the skills associated with construction.</p>
                 </div>
                 <div class="sponsor-company">
                     <img src="images/sponsors/spotify.png" alt="">
